--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -576,7 +576,7 @@ added to the decoder input (as in the \ac{cmlm} approach of
 \citealp{ghazvininejad-etal-2019-mask}, see Section \ref{sec:nat:semi}).
 
 % Very recently, a \ac{glat} model appeared among the top-scoring models at the
-% \acs{wmt} news translation shared task \citep{qian2021volctrans}. \JH{update
+% \acs{wmt} News Translation Shared Task \citep{qian2021volctrans}. \JH{update
 %   bib after WMT}
 
 
