--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -57,7 +57,7 @@ autoregressive teacher models, which we used for knowledge distillation of data
 for training our non-autoregressive student models.
 
 In our English-German experiments, we use autoregressive models from our
-submission to the \ac{wmt} 2021 News Translation shared task
+submission to the \ac{wmt} 2021 News Translation Shared Task
 \citep{chen-etal-2021-university}. We use these models both as a strong
 autoregressive baseline, and as teacher models for generating distilled data
 for the non-autoregressive student models, described in the next section.  The
@@ -544,7 +544,7 @@ compare better with some of the results in the related work.
 
 In this section we analyze the decoding speed of the English $\rightarrow$
 German \ac{nar} models. We aim at recreating the evaluation conditions
-following the \acs{wmt}~21 shared task on efficiency
+following the \acs{wmt}~21 Efficiency Shared Task
 \citep{heafield-etal-2021-findings}. We measure the decoding latency and
 throughput in different hardware environments.
 
