--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -190,7 +190,7 @@
   |------------+-------+------+-------+-------+------+------+------|
   | Batch size |     1 |    4 |     8 |    16 |   32 |   64 |  128 |
   |------------+-------+------+-------+-------+------+------+------|
-  | AR Base    |       |      | 18503 | 11087 | 6677 | 4503 | 3409 |
+  | AR Base    | 52087 | 9370 | 18503 | 11087 | 6677 | 4503 | 3409 |
   |------------+-------+------+-------+-------+------+------+------|
   | Large      | 14157 | 8079 |  7003 |  6452 | 6056 | 5767 | 5581 |
   | Base       |  8720 | 3875 |  3146 |  2769 | 2535 | 2394 | 2303 |
