--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,32 @@
+@article{kocmi2021ship,
+  title={To ship or not to ship: An extensive evaluation of automatic metrics for machine translation},
+  author={Kocmi, Tom and Federmann, Christian and Grundkiewicz, Roman and Junczys-Dowmunt, Marcin and Matsushita, Hitokazu and Menezes, Arul},
+  journal={arXiv preprint arXiv:2107.10821},
+  year={2021}
+}
+
+@article{daume2009search,
+  title={Search-based structured prediction},
+  author={Daum{\'e}, Hal and Langford, John and Marcu, Daniel},
+  journal={Machine learning},
+  volume={75},
+  number={3},
+  pages={297--325},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{gers2000learning,
+  title={Learning to forget: Continual prediction with LSTM},
+  author={Gers, Felix A and Schmidhuber, J{\"u}rgen and Cummins, Fred},
+  journal={Neural computation},
+  volume={12},
+  number={10},
+  pages={2451--2471},
+  year={2000},
+  publisher={MIT Press}
+}
+
 @inproceedings{heafield-etal-2021-findings,
   title={Findings of the {WMT} 2021 Shared Task on Efficient Translation},
   author={Heafield, Kenneth and Zhu, Qianqian and Grundkiewicz, Roman},
